--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -48,6 +48,7 @@ html(lang="uk")
         //a.contacts__map(href='geo:')
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6780.572464753727!2d30.438915748305362!3d50.46261492263509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x636e1900d0b57d9e!2z0JvQhtCT0JA60JfQkNCa0J7QnQ!5e0!3m2!1sen!2sua!4v1631112824836!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
+    +loading()
     +footer()
 
 
