--- a/src/pages/login-faceid.pug
+++ b/src/pages/login-faceid.pug
@@ -28,5 +28,8 @@ html(lang="uk")
           a.btn(href='submit') Увійти з Face ID
           a.text-14-16.color-orange.mt-48.fw-bold(href='login.html') Увійти за допомогою паролю
 
+
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
