--- a/src/pages/login.pug
+++ b/src/pages/login.pug
@@ -30,5 +30,7 @@ html(lang="uk")
           a.btn(href='profile.html') Увійти
           a.text-14-16.color-orange.mt-48.fw-bold(href='login-faceid.html') Увійти за допомогою Face ID
 
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
