--- a/src/pages/payment-methods.pug
+++ b/src/pages/payment-methods.pug
@@ -39,9 +39,7 @@ html(lang="uk")
             p.text-14-16.color-656565.mb-24 Платіжне доручення у відділені банку
             p.text-14-16.color-656565 Через будь-якого платіжного оператора за реквізитами
 
-
-
-
+    +loading()
     +footer()
 
 
