--- a/src/pages/profile.pug
+++ b/src/pages/profile.pug
@@ -153,7 +153,26 @@ html(lang="uk")
                   .text-12-16.color-81765E.mt-8 Опис існуючих способів поповнення
 
 
+      #profile-modal-1
+        .modal__content
+          .modal__topbar
+          .modal__close-btn
+          .text-15-20.color-orange.mt-40 Шановний учасник!
+          .text-14-20.color-6B6B6B.mt-40.text-center Звертаємо Вашу увагу, що поповнення пенсійного рахунку виконується за допомогою платіжного оператора. Ця послуга платна і буде знята комісія у розмірі ...%.
+          button#profile-modal-1-accept.clear-button.mt-40.mb-44.d-flex.align-items-center
+            span.text-17-16.color-orange Прийняти
+            .ic_done.ml-20
 
+      #profile-modal-2
+        .modal__content
+          .mt-113.mb-83.text-16-16.color-656565.text-center Перехід на сторонню платіжну систему
+          button#profile-modal-2-cancel.clear-button.mb-16.text-14-16.color-orange Прийняти
+
+
+
+
+
+    +loading()
     +footer(3)
 
 
