--- a/src/pages/reset-password-step1.pug
+++ b/src/pages/reset-password-step1.pug
@@ -33,6 +33,9 @@ html(lang="uk")
           p.color-858585.text-14-16.mr-28 Згадали пароль?
           a.text-14-16.color-green.fw-bold(href='login.html') Повернутись
 
+
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
 
