--- a/src/pages/reset-password-success.pug
+++ b/src/pages/reset-password-success.pug
@@ -26,6 +26,8 @@ html(lang="uk")
         a.btn(href="profile.html") Перейти у застосунок
 
 
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
 
