--- a/src/pages/registration-success.pug
+++ b/src/pages/registration-success.pug
@@ -26,5 +26,7 @@ html(lang="uk")
         a.btn(href="profile.html") Перейти у застосунок
 
 
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
