--- a/src/pages/reset-password-step2.pug
+++ b/src/pages/reset-password-step2.pug
@@ -33,6 +33,8 @@ html(lang="uk")
           a.text-14-16.color-green.fw-bold(href='login.html') Повернутись
 
 
+    +loading()
+
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/index.js")
 
