--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -4,7 +4,7 @@
 @import "icons";
 @import "cards";
 @import "slick";
-//@import "slick-theme";
+@import "modal";
 
 @import "header";
 @import "footer";
