--- a/src/styles/shared/icons.scss
+++ b/src/styles/shared/icons.scss
@@ -180,4 +180,10 @@
     height: 24px;
     background-image: url('../assets/images/icons/ic_done--inactive.svg');
   }
+
+  &_faq {
+    width: 26px;
+    height: 26px;
+    background-image: url('../assets/images/icons/ic_faq.svg');
+  }
 }
