--- a/src/styles/shared/header.scss
+++ b/src/styles/shared/header.scss
@@ -1,7 +1,8 @@
 @import "variables";
 
 .header {
-  padding: 14px 10px;
+  padding: 8px 26px 8px 10px;
+  height: 47px;
 
   &.header-orange {
     background: $color-orange;
