--- a/src/index.pug
+++ b/src/index.pug
@@ -25,3 +25,7 @@ html(lang="uk")
           a.btn(href='pages/login.html') Увійти
           a.text-16-16.color-green.mt-36(href='pages/registration.html') Зареєструватись
           a.text-14-16.color-8E8E8E.mt-48(href='pages/demo.html') Переглянути демо версію
+
+    script(src="scripts/jquery-3.6.0.min.js")
+    script(src="scripts/jquery-ui.min.js")
+    script(src="scripts/index.js")
