--- a/src/pages/demo.pug
+++ b/src/pages/demo.pug
@@ -37,6 +37,6 @@ html(lang="uk")
     +loading()
 
     script(src="../scripts/jquery-3.6.0.min.js")
-    //script(src="../scripts/jquery-ui.min.js")
+    script(src="../scripts/jquery-ui.min.js")
     script(src="../scripts/slick.min.js")
     script(src="../scripts/index.js")
