--- a/src/pages/payment-methods.pug
+++ b/src/pages/payment-methods.pug
@@ -46,6 +46,6 @@ html(lang="uk")
 
 
   script(src="../scripts/jquery-3.6.0.min.js")
-
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
 
