--- a/src/pages/registration-success.pug
+++ b/src/pages/registration-success.pug
@@ -29,4 +29,5 @@ html(lang="uk")
     +loading()
 
   script(src="../scripts/jquery-3.6.0.min.js")
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
