--- a/src/pages/requisites.pug
+++ b/src/pages/requisites.pug
@@ -63,6 +63,6 @@ html(lang="uk")
 
 
   script(src="../scripts/jquery-3.6.0.min.js")
-
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
 
