--- a/src/pages/reset-password-step1.pug
+++ b/src/pages/reset-password-step1.pug
@@ -37,6 +37,7 @@ html(lang="uk")
     +loading()
 
   script(src="../scripts/jquery-3.6.0.min.js")
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
 
 
