--- a/src/pages/reset-password-step2.pug
+++ b/src/pages/reset-password-step2.pug
@@ -36,5 +36,6 @@ html(lang="uk")
     +loading()
 
   script(src="../scripts/jquery-3.6.0.min.js")
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
 
