--- a/src/pages/reset-password-success.pug
+++ b/src/pages/reset-password-success.pug
@@ -29,5 +29,6 @@ html(lang="uk")
     +loading()
 
   script(src="../scripts/jquery-3.6.0.min.js")
+  script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
 
