--- a/src/pages/regular-payment-edit.pug
+++ b/src/pages/regular-payment-edit.pug
@@ -34,7 +34,7 @@ html(lang="uk")
                   input.radio-button__control(type='radio' name="regular-payment-fund" id="fund-1" value="fund-1")
                   .radio-button__checkmark
               label.regular-payment__edit-list__item(for="fund-2")
-                span ВНФП Взаємодопомога
+                span ВНФП Гарант-пенсія
                 .radio-button.radio-button--no-border
                   input.radio-button__control(type='radio' name="regular-payment-fund" id="fund-2" value="fund-2")
                   .radio-button__checkmark
@@ -163,4 +163,3 @@ html(lang="uk")
   script(src="../scripts/slick.min.js")
 
   script(src="../scripts/index.js")
-
