--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -37,7 +37,7 @@ main {
 .rounded-circle {
   width: 51px;
   height: 51px;
-  background-color: #fff;
+  //background-color: #fff;
   margin-top: 45px;
   margin-bottom: 73px;
 }
@@ -113,4 +113,3 @@ main {
 .h-366 {
   height: 366px;
 }
-
