--- a/src/pages/payment-methods.pug
+++ b/src/pages/payment-methods.pug
@@ -18,6 +18,8 @@ html(lang="uk")
 
     main#payment-methods.with-footer.payment-methods
       .d-flex.flex-column.align-items-center.pb-20
+        .profile__logo.mb-32
+          +logo(122)
         .container-shadow
           .container-shadow__icon
             <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(#filter0_d)"><circle cx="28" cy="24" r="24" fill="white"/><circle cx="28" cy="24" r="23.5" stroke="#F2A900"/></g><path d="M32.375 28.25C32.2092 28.25 32.0503 28.3158 31.9331 28.4331C31.8158 28.5503 31.75 28.7092 31.75 28.875C31.75 29.0408 31.8158 29.1997 31.9331 29.3169C32.0503 29.4342 32.2092 29.5 32.375 29.5H34.875C35.0408 29.5 35.1997 29.4342 35.3169 29.3169C35.4342 29.1997 35.5 29.0408 35.5 28.875C35.5 28.7092 35.4342 28.5503 35.3169 28.4331C35.1997 28.3158 35.0408 28.25 34.875 28.25H32.375Z" fill="#F2A900"/><path d="M18 20.125C18 19.2962 18.3292 18.5013 18.9153 17.9153C19.5013 17.3292 20.2962 17 21.125 17H34.875C35.7038 17 36.4987 17.3292 37.0847 17.9153C37.6708 18.5013 38 19.2962 38 20.125V28.875C38 29.7038 37.6708 30.4987 37.0847 31.0847C36.4987 31.6708 35.7038 32 34.875 32H21.125C20.2962 32 19.5013 31.6708 18.9153 31.0847C18.3292 30.4987 18 29.7038 18 28.875V20.125ZM19.25 28.875C19.25 29.3723 19.4475 29.8492 19.7992 30.2008C20.1508 30.5525 20.6277 30.75 21.125 30.75H34.875C35.3723 30.75 35.8492 30.5525 36.2008 30.2008C36.5525 29.8492 36.75 29.3723 36.75 28.875V23.25H19.25V28.875ZM36.75 20.125C36.75 19.6277 36.5525 19.1508 36.2008 18.7992C35.8492 18.4475 35.3723 18.25 34.875 18.25H21.125C20.6277 18.25 20.1508 18.4475 19.7992 18.7992C19.4475 19.1508 19.25 19.6277 19.25 20.125V22H36.75V20.125Z" fill="#F2A900"/><defs><filter id="filter0_d" x="0" y="0" width="56" height="56" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dy="4"/><feGaussianBlur stdDeviation="2"/><feColorMatrix type="matrix" values="0 0 0 0 0.766667 0 0 0 0 0.76475 0 0 0 0 0.76475 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/></filter></defs></svg>
@@ -41,7 +43,6 @@ html(lang="uk")
 
     +loading()
     +footer()
-
 
 
 
