--- a/src/pages/profile.pug
+++ b/src/pages/profile.pug
@@ -122,8 +122,9 @@ html(lang="uk")
       //button#open open
       .bottom-swipe-menu
         //.bottom-swipe-menu__btn menu
-        .bottom-swipe-menu__overlay
-        .bottom-swipe-menu__header
+        #bottom-swipe-menu-overlay.bottom-swipe-menu__overlay
+        #bottom-swipe-menu-header.bottom-swipe-menu__header
+          div
         .bottom-swipe-menu__content
           .bottom-swipe-menu__items-container
             a.d-flex.align-items-center(href='account-statement.html')
@@ -177,10 +178,11 @@ html(lang="uk")
 
 
 
-
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/slick.min.js")
+  script(src="../scripts/hammer.min.js")
 
   script(src="../scripts/index.js")
+
 
