--- a/src/pages/regular-payment.pug
+++ b/src/pages/regular-payment.pug
@@ -119,7 +119,7 @@ html(lang="uk")
               .radio-button__checkmark
             .text-16-16.color-656565.ml-20 за тиждень до платежу
         .list.w-100.mt-48
-          .list__item
+          .list__item.list__item--no-border
             .list__item__prefix
               .ic_notification
             .list__item__label Дозволити PUSH - сповіщення
@@ -176,4 +176,3 @@ html(lang="uk")
   script(src="../scripts/slick.min.js")
 
   script(src="../scripts/index.js")
-
