--- a/src/pages/reset-password-success.pug
+++ b/src/pages/reset-password-success.pug
@@ -20,7 +20,7 @@ html(lang="uk")
       .d-flex.flex-column.align-items-center.w-100.h-100.justify-content-around
         .d-flex.flex-column.w-100.align-items-center
           h1.text-h1.color-white Ваш пароль успішно змінено!
-          .rounded-circle
+          img.rounded-circle(src='../assets/images/done.gif')
           .p.text-14-20.color-858585.text-center Для зміни паролю скористайтесь <br> налаштуваннями в особистому кабінеті.
 
         a.btn(href="profile.html") Перейти у застосунок
@@ -31,4 +31,3 @@ html(lang="uk")
   script(src="../scripts/jquery-3.6.0.min.js")
   script(src="../scripts/jquery-ui.min.js")
   script(src="../scripts/index.js")
-
